kubernetes-examples/development-idp/kustomize/base/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: django-idp
    app.kubernetes.io/name: django-idp
  name: idp-service
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
      targetPort: 7000
  selector:
    app.kubernetes.io/name: django-idp
  type: ClusterIP
